Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27705

problem with execution of catch2 tests that contain a comma in the name

XMLWordPrintable

    • Linux/X11
    • 3b7029fbdc (qt-creator/qt-creator/8.0) 3b7029fbdc (qt-creator/qt-creator/master)

      I have several Catch2 tests in my project, one of them has a comma in the name, e.g.

      TEST_CASE("blah , blah") {}
      

      I then select all tests in the test pane, and "Run Selected Tests". The test with the comma and all following tests are not run.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cstenger Christian Stenger
            adamce Adam
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes