AutoTest: Fix handling of test cases with comma

Fixes: QTCREATORBUG-27705
Change-Id: I6e22df4e401dc52e8d8599cc8b4de16200093b03
Reviewed-by: David Schulz <david.schulz@qt.io>